force-app/main/default/objects/people__c/people__c.object-meta.xml
<CustomObject>
    <label>People</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>People Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Peoples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>