force-app/main/default/objects/people__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Peoples</relationshipLabel>
    <relationshipName>Peoples</relationshipName>
    <type>Lookup</type>
</CustomField>