force-app/main/default/objects/people__c/fields/Dates__c.field-meta.xml
<CustomField>
    <fullName>Dates__c</fullName>
    <description>XYZ</description>
    <label>Dates</label>
    <type>Date</type>
</CustomField>